test/trivial/deitz/test_var_decl_strange4.good
test_var_decl_strange4.chpl:4: error: 'x' used before defined (first used here)
